--- a/contact-details.html
+++ b/contact-details.html
@@ -9,8 +9,8 @@
 <body>
   <h1>My Contact Details</h1>
   <ul>
-    <li>Phone: 07402602069</li>
-    <li>Email: aidanjames@hey.com</li>
+    <li>Phone: 07402609999</li>
+    <li>Email: aidan123456@hey.com</li>
   </ul>
   <hr>
   <form action="mailto:aidanjames@hey.com" method="post" enctype="text/plain">
