--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
   <!-- EDUCATION -->
   <h3>Education</h3>
   <ul>
-    <li>Owairoa Primary</li>
-    <li>Howick Intermediate</li>
-    <li>Howick College</li>
-    <li>Auckland University</li>
-    <li>Otago University</li>
+    <li>School</li>
+    <li>More school</li>
   </ul>
 
   <hr>
