--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>♥ Aidan's personal site</title>
+  <title>Aidan's personal site</title>
 </head>
 
 <body>
@@ -13,9 +13,9 @@
         <img src="images/profile-cropped.png" alt="profile photo aidan pendlebury">
       </td>
       <td>
-        <h1>Aidan Pendlebury</h1>
-        <p><em>Founder of Aidan Pendlebury inc.</em></p>
-        <p>I'm an ordinary old sod who liked to eat food and breathe. My hobbies include sitting and breathing.</p>
+        <h1>Aidan James</h1>
+        <p><em>Founder of Aidan James inc.</em></p>
+        <p>I'm an ordinary old sod who eats food. My hobbies include sitting and breathing.</p>
       </td>
     </tr>
   </table>
